--- a/www/css/appstyle.css
+++ b/www/css/appstyle.css
@@ -58,6 +58,7 @@ color:white;
 	height:70%;
     margin-right:2%;
     float:left;
+    display:none;
 }
 #slidercanvas1{
 
@@ -66,6 +67,7 @@ color:white;
     width: 20px;
     height:60%;
     /* float:left; */
+    display:none;
 }
 .scoreSpan{
 
@@ -77,7 +79,7 @@ color:white;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	width: 65%;
+	width: 70%;
 	height: 70%;
 	border:3px solid #0000FF;
 
